--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,8 @@
-FROM python:3.9
+FROM python:3.10
 
 WORKDIR /app
+
+#RUN export PYTHONPATH=$PWD
 
 COPY requirements.txt .
 
@@ -8,6 +10,5 @@ RUN pip install -r requirements.txt
 
 COPY ./app /app
 
-#RUN export PYTHONPATH=$PWD
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
