Added NGINX API gateway

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,3 +31,15 @@ services:
       context: ./ollama
     ports:
       - "11434:11434"  # Example port, update as necessary
+  
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/conf.d:/etc/nginx/conf.d:ro
+    depends_on:
+      - frontend
+      - backend
+      - ollama
